feat(frontend): sign in form

--- a/frontend/src/app/sign-in/sign-in.component.html
+++ b/frontend/src/app/sign-in/sign-in.component.html
@@ -1,3 +1,12 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+<form>
+    <div>
+        <label for="email">Email</label>
+        <input id="email" type="email" [(ngModel)]="email" name="email">
+    </div>
+    <div>
+        <label for="password">Password</label>
+        <input id="password" type="password" [(ngModel)]="password" name="password">
+    </div>
+
+    <button type="submit">Sign In</button>
+</form>
