feat(frontend): sign in function

--- a/frontend/src/app/sign-in/sign-in.component.html
+++ b/frontend/src/app/sign-in/sign-in.component.html
@@ -8,5 +8,5 @@
         <input id="password" type="password" [(ngModel)]="password" name="password">
     </div>
 
-    <button type="submit">Sign In</button>
+    <button (click)="signIn()" type="submit">Sign In</button>
 </form>
