feat(frontend): label component

--- a/frontend/src/app/sign-in/sign-in.component.html
+++ b/frontend/src/app/sign-in/sign-in.component.html
@@ -1,12 +1,12 @@
 <div>
     <form>
         <div class="mt-5">
-            <label for="email">Email</label>
+            <ui-label for="email">Email</ui-label>
             <!-- <input id="email" type="email" [(ngModel)]="email" name="email"> -->
             <ui-input></ui-input>
         </div>
         <div class="mt-5">
-            <label for="password">Password</label>
+            <ui-label for="password">Password</ui-label>
             <ui-input></ui-input>
         </div>
 
