fix(frontend): padding to input component

--- a/frontend/src/app/shared/components/input/input.component.html
+++ b/frontend/src/app/shared/components/input/input.component.html
@@ -1,1 +1,1 @@
-<input class="border rounded-md bg-black border-white text-white">
+<input class="border rounded-md bg-black border-white text-white p-2">
