--- a/frontend/src/app/sign-in/sign-in.component.html
+++ b/frontend/src/app/sign-in/sign-in.component.html
@@ -3,7 +3,7 @@
         <div class="mt-5">
             <ui-label for="email">Email</ui-label>
             <!-- <input id="email" type="email" [(ngModel)]="email" name="email"> -->
-            <ui-input></ui-input>
+            <ui-input placeholder="email@example.com"></ui-input>
         </div>
         <div class="mt-5">
             <ui-label for="password">Password</ui-label>
