feat(frontend): input component type

--- a/frontend/src/app/sign-in/sign-in.component.html
+++ b/frontend/src/app/sign-in/sign-in.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="mt-5">
             <ui-label for="password">Password</ui-label>
-            <ui-input></ui-input>
+            <ui-input type="password"></ui-input>
         </div>
 
         <button (click)="signIn()" type="submit">Sign In</button>
