fix(frontend): center sign in form

--- a/frontend/src/app/shared/components/input/input.component.html
+++ b/frontend/src/app/shared/components/input/input.component.html
@@ -1,1 +1,1 @@
-<input class="border rounded-md bg-black border-white text-white p-2 placeholder:text-gray-400" [placeholder]="placeholder" [type]="type"/>
+<input class="w-full border rounded-md bg-black border-white text-white p-2 placeholder:text-gray-400" [placeholder]="placeholder" [type]="type"/>
