--- a/frontend/src/app/sign-in/sign-in.component.html
+++ b/frontend/src/app/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="flex justify-center items-center h-screen">
     <form>
         <div class="mt-5 ml-5">
             <ui-label for="email">Email</ui-label>
