feat(frontend): input component variable assignment

--- a/frontend/src/app/sign-in/sign-in.component.html
+++ b/frontend/src/app/sign-in/sign-in.component.html
@@ -3,7 +3,7 @@
         <div class="mt-5 ml-5">
             <ui-label for="email">Email</ui-label>
             <!-- <input id="email" type="email" [(ngModel)]="email" name="email"> -->
-            <ui-input placeholder="email@example.com"></ui-input>
+            <ui-input [(ngModel)]="email" name="email" placeholder="email@example.com"></ui-input>
         </div>
         <div class="mt-5 ml-5">
             <ui-label for="password">Password</ui-label>
